--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт для рисования</title>
+    <title>MELLSTROY GAME - Рисование</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <canvas id="canvas" width="1000" height="1000"></canvas>
+        <canvas id="canvas" width="800" height="600"></canvas>
         <div class="tools">
-            <label for="color">Выберите цвет:</label>
-            <input type="color" id="color" value="#FFFFFF"> <!-- Белый по умолчанию -->
-            <button id="clear">Очистить холст</button>
-            <label for="brushSize">Толщина кисти:</label>
-            <input type="range" id="brushSize" min="1" max="50" value="5">
+            <label for="color">Цвет:</label>
+            <input type="color" id="color" value="#FFFFFF">
+            <button id="clear">Очистить</button>
+            <button id="zoomIn">+ (Зум)</button>
+            <button id="zoomOut"> - (Зум)</button>
         </div>
     </div>
     <script src="script.js"></script>
