--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MELLSTROY GAME - Рисование</title>
+    <title>MELLSTROY GAME</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <canvas id="canvas" width="800" height="600"></canvas>
         <div class="tools">
-            <label for="color">Цвет:</label>
             <input type="color" id="color" value="#FFFFFF">
             <button id="clear">Очистить</button>
-            <button id="zoomIn">+ (Зум)</button>
-            <button id="zoomOut"> - (Зум)</button>
         </div>
     </div>
     <script src="script.js"></script>
